--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <img class="bg" src="/images/bg.png" alt="background" />
+    <img class="bg" src="images/bg.png" alt="background" />
     <header class="header">
       <i class="fa-solid fa-layer-group logo"></i>
       <nav class="nav">
@@ -48,8 +48,8 @@
           </form>
         </section>
         <section class="images">
-          <img src="/images/singer.png" alt="Singer" class="singer" />
-          <img src="/images/guitar.png" alt="guitar" class="guitar" />
+          <img src="images/singer.png" alt="Singer" class="singer" />
+          <img src="images/guitar.png" alt="guitar" class="guitar" />
         </section>
       </section>
       <section class="sponsors">
