--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
       <section class="sponsors">
         <span class="seen-on-text">seen on</span>
         <img
-          src="/images/Artist-Papers.png"
+          src="images/Artist-Papers.png"
           alt="Artist papers"
           class="sponsor-imgs"
         />
         <img
-          src="/images/events-seas.png"
+          src="images/events-seas.png"
           alt="Events seas"
           class="sponsor-imgs"
         />
-        <img src="/images/Creter-s.png" alt="Creters" class="sponsor-imgs" />
+        <img src="images/Creter-s.png" alt="Creters" class="sponsor-imgs" />
       </section>
 
       <section class="how-it-works">
