--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Finder</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="https://i.ibb.co/mNn2gzM/artistfinder-favicon.png" />
+    <link rel="icon" href="https://i.ibb.co/mNn2gzM/artistfinder-favicon.jpg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Poppins%3Awght%40400%3B500%3B600&display=swap"
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <img class="bg" src="images/bg.png" alt="background" />
+    <img class="bg" src="/images/bg.jpg" alt="background" />
     <header class="header">
       <i class="fa-solid fa-layer-group logo"></i>
       <nav class="nav">
@@ -48,23 +48,23 @@
           </form>
         </section>
         <section class="images">
-          <img src="images/singer.png" alt="Singer" class="singer" />
-          <img src="images/guitar.png" alt="guitar" class="guitar" />
+          <img src="/images/singer.jpg" alt="Singer" class="singer" />
+          <img src="/images/guitar.jpg" alt="guitar" class="guitar" />
         </section>
       </section>
       <section class="sponsors">
         <span class="seen-on-text">seen on</span>
         <img
-          src="images/Artist-Papers.png"
+          src="/images/Artist-Papers.jpg"
           alt="Artist papers"
           class="sponsor-imgs"
         />
         <img
-          src="images/events-seas.png"
+          src="/images/events-seas.jpg"
           alt="Events seas"
           class="sponsor-imgs"
         />
-        <img src="images/Creter-s.png" alt="Creters" class="sponsor-imgs" />
+        <img src="/images/Creter-s.jpg" alt="Creters" class="sponsor-imgs" />
       </section>
 
       <section class="how-it-works">
