--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <img class="bg" src="/images/bg.jpg" alt="background" />
+    <img class="bg" src="images/bg.jpg" alt="background" />
     <header class="header">
       <i class="fa-solid fa-layer-group logo"></i>
       <nav class="nav">
@@ -48,23 +48,23 @@
           </form>
         </section>
         <section class="images">
-          <img src="/images/singer.jpg" alt="Singer" class="singer" />
-          <img src="/images/guitar.jpg" alt="guitar" class="guitar" />
+          <img src="images/singer.jpg" alt="Singer" class="singer" />
+          <img src="images/guitar.jpg" alt="guitar" class="guitar" />
         </section>
       </section>
       <section class="sponsors">
         <span class="seen-on-text">seen on</span>
         <img
-          src="/images/Artist-Papers.jpg"
+          src="images/Artist-Papers.jpg"
           alt="Artist papers"
           class="sponsor-imgs"
         />
         <img
-          src="/images/events-seas.jpg"
+          src="images/events-seas.jpg"
           alt="Events seas"
           class="sponsor-imgs"
         />
-        <img src="/images/Creter-s.jpg" alt="Creters" class="sponsor-imgs" />
+        <img src="images/Creter-s.jpg" alt="Creters" class="sponsor-imgs" />
       </section>
 
       <section class="how-it-works">
